Mini framework for cleaner server code

--- a/web.config
+++ b/web.config
@@ -3,6 +3,12 @@
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
+    <!-- https://github.com/azure/iisnode/blob/master/src/samples/configuration/web.config -->
+    <iisnode
+      watchedFiles="web.config;*.js"
+      nodeProcessCommandLine="node.exe --harmony"
+      maxLogFiles="4"
+    />
     <staticContent>
       <remove fileExtension=".txt" />
       <mimeMap fileExtension=".txt" mimeType="text/plain; charset=utf-8" />
